[package]
name = "humanify-rs"
version = "0.1.0"
edition = "2021"
description = "A JavaScript deobfuscator that renames minified variables using callbacks"
license = "MIT"

[[bin]]
name = "humanify"
path = "src/bin/humanify.rs"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]

[dependencies]
oxc = "0.65"
oxc_allocator = "0.65"
oxc_parser = "0.65"
oxc_ast = "0.65"
oxc_ast_visit = "0.65"
oxc_span = "0.65"
oxc_syntax = "0.65"
oxc_codegen = "0.65"
thiserror = "2.0"

# LLM inference
llama-cpp-2 = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# HTTP client for downloading models
ureq = { version = "3.0", features = ["native-tls"] }

# Utilities
dirs = "6.0"

[dev-dependencies]
pretty_assertions = "1.4"
